beta 버전 구현 완료, 프로젝트에 당장 적용 가능하도록 하드코딩되어있음. 추후에 유연하게 작동하도록 수정 요망

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0' // Apache Commons Lang, html 태그 변환용
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    // Selenium Java binding
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.23.0'
+
+    // Add WebDriver manager to automatically manage browser drivers
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.7.0'
 }
 
 test {
