명령어 기능 추가 및 모델 클래스 추가

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+
     // Selenium Java binding
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.23.0'
 
