--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
 
     // Selenium Java binding
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.23.0'
